Rename folder for UI
Since the project is no longer called postgresql_notes this folder name
no longer made sense to me, so I renamed it.

--- a/pg_scanner_sweep_ui/package.json
+++ b/pg_scanner_sweep_ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postgresql_notes_ui",
+  "name": "pg_scanner_sweep_ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
