--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "^4.0.2",
     "vue": "^2.6.9",
     "vue-loader": "^15.7.0",
+    "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.6.9"
   },
   "version": "0.1.0",
