--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
+    "set-value": "^2.0.1",
     "vue": "^2.6.9",
     "vue-loader": "^15.7.0",
     "vue-resource": "^1.5.1",
