--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pg_scanner_sweep",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0-alpha",
-    "@rails/activestorage": "^6.0.0-alpha",
-    "@rails/ujs": "^6.0.0-alpha",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.2",
     "set-value": "^2.0.1",
     "vue": "^2.6.9",
